--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,11 @@
-aenum==1.4.5
-alembic==0.8.5
-chdir==1.0
-Flask==0.10.1
-Flask-Cors==2.0.1
-Flask-Migrate==1.8.0
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.0
-flup==1.0.2
-gunicorn==19.1.1
-hadoopy==0.6.0
-itsdangerous==0.24
-Jinja2==2.7.3
-Mako==1.0.4
+Flask==0.11.1
+Flask-Login==0.4.0
+Flask-SQLAlchemy==2.1
+Jinja2==2.8
 MarkupSafe==0.23
-mercurial==3.7.2
-mod-wsgi==4.4.0
-mod-wsgi-metrics==1.1.0
 MySQL-python==1.2.5
-nltk==3.1
-nose==1.3.4
-numpy==1.11.0
-pandas==0.16.2
-protobuf==3.0.0b2
-psutil==2.1.3
-pymongo==3.2
-python-editor==1.0
-pywebhdfs==0.2.4
-PyYAML==3.11
-requests==2.6.0
-rpy2==2.5.6
-scikit-learn==0.17
-scipy==0.15.1
-selenium==2.53.1
-singledispatch==3.4.0.3
-six==1.10.0
-sklearn==0.0
-SQLAlchemy==0.9.9
-substrate==1.0
-tensorflow==0.8.0
-textblob==0.11.0
-Unidecode==0.4.17
-vboxapi==1.0
-virtualenv==1.11.6
-Werkzeug==0.10.1
+SQLAlchemy==1.1.3
+Werkzeug==0.11.11
+click==6.6
+itsdangerous==0.24
+wsgiref==0.1.2
